v1.1.2 2008-03-28
================
NEW STUFF:
- New symbol s$potmethod is now available.  This is used to determine the appropriate
  site interpretation for the contents of c0pot0.  s$potmethod can be set to these values:
  - 1: (default, legacy) Common pot
  - 2: (new) Total pot, including current bets and side bets  (Thanks, Nick Coldhand)
  (quiqsilver)


v1.1.1 2008-03-15
================
NEW STUFF:
- New symbol s$network is now available.  This is used to determine the appropriate
  network to pull Poker Tracker data for when s$sitename is not a PT supported site.  OH will
  first check s$sitename for a supported network name, then s$network.  These are the supported
  names for both s$sitename and s$network and must be lowercase: stars, party, ultimate, absolute,
  microgaming, ongame, cryptologic, pacific, fulltilt, b2b, tribeca, worldpex, ipoker, tain,
  bodog, everest, boss, and betfair. (quiqsilver)
  
- The entry window now has a status bar which displays common characters that are missing a font
  definition on the left side, and cards that are missing a hash on the right side for easy
  reference. (Thanks, Folder and dipitlow)
  - The entry window now has a "Tracker" section to set options for what is displayed in the status
    bar: (Thanks, Nick Coldhand)
    - Fonts Set: Select which font set to display missing fonts for.
    - Fonts #: Select the number of fonts desired for each character in the currently selected set.
    - Cards #: Select the number of card hashes desired for each card. (quiqsilver)
    
- OpenScrape's behavior when creating hashes and images is now consistent with its font creation
  behavior: 
  - The selection will now return to the previously selected image or region respectively.
  - When the first hash or image is created, the respective section will gain the '+' button to
    indicate it now has a member and can be expanded. (quiqsilver)

BUG FIXES: